--- a/.github/workflows/update-image-light.yml
+++ b/.github/workflows/update-image-light.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: siddharth2016/update-readme-image@main
         with:
           IMG_ALT: Just some gif
-          IMG_PATH: ThisisSakshi/.github/images/dark_mode
+          IMG_PATH: ThisisSakshi/.github/images/light_mode
           ALIGN: center
           WIDTH: 45%
           COMMIT_MESSAGE: Updated Dark mode gif
