--- a/.github/workflows/update-image-dark.yml
+++ b/.github/workflows/update-image-dark.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: siddharth2016/update-readme-image@main
         with:
+          IMG_PATH: "ThisisSakshi/.github/images/dark_mode"
           IMG_ALT: Just some gif
-          IMG_PATH: ThisisSakshi/.github/images/dark_mode
           ALIGN: center
           WIDTH: 45%
           COMMIT_MESSAGE: Updated Dark mode gif
