--- a/.github/workflows/update-image-dark.yml
+++ b/.github/workflows/update-image-dark.yml
@@ -17,4 +17,5 @@ jobs:
           IMG_PATH: .github/images/dark_mode
           ALIGN: center
           HEIGHT: 180px
+          WIDTH: ''
           COMMIT_MESSAGE: Updated Dark mode gif
