--- a/.github/workflows/update-image-light.yml
+++ b/.github/workflows/update-image-light.yml
@@ -3,8 +3,8 @@ name: Update Image Readme Light
 on:
   workflow_dispatch:
   schedule:
-    # Runs every 6 hours past 2 minutes
-    - cron: "5 * * * *"
+    # Runs every 6 hours past 5 minutes
+    - cron: "5 */6 * * *"
 
 jobs:
   update-readme:
